@@ -1,4 +1,10 @@
-2008-07-26	Jannis Pohlmann <jannis@xfce.org>
+2008-08-12  Brian Tarricone <bjt23@cornell.edu>
+
+	* exo-mount/exo-mount-hal.c: Add support for mounting and
+	  unmounting encrypted volumes.  Patch from Colin Leroy.
+	  Bug #3349.
+
+200-07-26	Jannis Pohlmann <jannis@xfce.org>
 
 	* autogen.sh: Add @REVISION@ substitution support for git svn 
 	  repositories.
